[package]
name = "web3_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
secp256k1 = { version = "0.21", features = ["rand"] }